--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+#version: '3.8'
 
 services:
   api:
@@ -6,7 +6,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - MONGODB_URI=mongodb://mongo:27017/vehicleDB
+      - MONGODB_URI=mongodb://admin:admin123@mongo:27017/vehicleDB?authSource=admin
     depends_on:
       - mongo
     restart: unless-stopped
