--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test:coverage": "jest --coverage",
-    "start": "node app.js",
+    "start": "node server.js",
     "dev": "nodemon app.js",
     "test": "jest"
   },
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/Chrimika/TP304-GROUPE9-Testing#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
