--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "express": "^5.1.0",
     "mongoose": "^8.16.1",
     "nodemon": "^3.1.10",
-    "supertest": "^7.1.1"
+    "supertest": "^7.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^30.0.4"
